2008-03-28  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_from_uri): don't try to
	unref URIs if the theme package is invalid (bug #524567)

2008-03-27  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_real): remove bogus flag
	(gnome_theme_install_from_uri): update for internal API change

2008-03-27  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Patrick Wade <patrick.wade@sun.com>

	* appearance-themes.c: (custom_font_cb),
	(theme_message_area_response_cb), (theme_message_area_update),
	(themes_init), (themes_shutdown):
	* appearance.h: allow the user to revert a font change proposed by a
	metatheme (bug #519065)

2008-03-19  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: don't declare the backgrounds icon view
	reorderable. It's not. Besides, setting this property breaks the
	custom drag and drop functionality (bug #523347). This fixes the
	critical warning when trying to drag an unselected item, but it looks
	like the new nautilus doesn't support background drag and drop, anyway

2008-03-11  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: don't resize the font samples vertically when
	the window is resized (bug #521823)

2008-02-27  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_from_uri): adapt to new
	FileTransferDialog that uses gio instead of GnomeVFS

2008-02-16  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_option_menu_set), (wp_load_stuffs):
	* gnome-wp-item.c: (gnome_wp_item_update), (gnome_wp_item_new):
	* gnome-wp-item.h: always apply the current GConf settings to the
	initially selected wallpaper so that we don't modify the settings if
	GConf state and the definition in backgrounds.xml are not identical
	(bug #516746)

	* gnome-wp-xml.c: (gnome_wp_xml_load_xml): get rid of redundant if

2008-02-15  Kjartan Maraas  <kmaraas@gnome.org>

	* appearance-desktop.c: (wp_scale_type_changed),