@@ -2,7 +2,7 @@
  * gedit-message-area.h
  * This file is part of gedit
  *
- * Copyright (C) 2005 - Paolo Maggi 
+ * Copyright (C) 2005 - Paolo Maggi
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -16,14 +16,14 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, 
+ * Foundation, Inc., 59 Temple Place, Suite 330,
  * Boston, MA 02111-1307, USA.
  */
- 
+
 /*
- * Modified by the gedit Team, 2005. See the AUTHORS file for a 
- * list of people on the gedit Team.  
- * See the ChangeLog files for a list of changes. 
+ * Modified by the gedit Team, 2005. See the AUTHORS file for a
+ * list of people on the gedit Team.
+ * See the ChangeLog files for a list of changes.
  *
  * $Id: gedit-message-area.h 5666 2007-06-29 19:52:25Z sfre $
  */
@@ -31,7 +31,7 @@
 #ifndef __GEDIT_MESSAGE_AREA_H__
 #define __GEDIT_MESSAGE_AREA_H__
 
-#include <gtk/gtkdialog.h>
+#include <gtk/gtkhbox.h>
 
 G_BEGIN_DECLS
 
@@ -53,7 +53,7 @@ typedef struct _GeditMessageAreaPrivate GeditMessageAreaPrivate;
  */
 typedef struct _GeditMessageArea GeditMessageArea;
 
-struct _GeditMessageArea 
+struct _GeditMessageArea
 {
 	GtkHBox parent;
 
@@ -66,7 +66,7 @@ struct _GeditMessageArea
  */
 typedef struct _GeditMessageAreaClass GeditMessageAreaClass;
 
-struct _GeditMessageAreaClass 
+struct _GeditMessageAreaClass
 {
 	GtkHBoxClass parent_class;
 
@@ -78,7 +78,7 @@ struct _GeditMessageAreaClass
 
 	/* Padding for future expansion */
 	void (*_gedit_reserved1) (void);
-	void (*_gedit_reserved2) (void);	
+	void (*_gedit_reserved2) (void);
 };
 
 /*
@@ -93,30 +93,30 @@ GtkWidget	*gedit_message_area_new_with_buttons	(const gchar      *first_button_t
 
 void		 gedit_message_area_set_contents	(GeditMessageArea *message_area,
                                              		 GtkWidget        *contents);
-                              		 
+
 void		 gedit_message_area_add_action_widget	(GeditMessageArea *message_area,
                                          		 GtkWidget        *child,
                                          		 gint              response_id);
-                                         		 
+
 GtkWidget	*gedit_message_area_add_button        	(GeditMessageArea *message_area,
                                          		 const gchar      *button_text,
                                          		 gint              response_id);
-             		 
-GtkWidget	*gedit_message_area_add_stock_button_with_text 
-							(GeditMessageArea *message_area, 
-				    			 const gchar      *text, 
-				    			 const gchar      *stock_id, 
+
+GtkWidget	*gedit_message_area_add_stock_button_with_text
+							(GeditMessageArea *message_area,
+				    			 const gchar      *text,
+				    			 const gchar      *stock_id,
 				    			 gint              response_id);
 
 void       	 gedit_message_area_add_buttons 	(GeditMessageArea *message_area,
                                          		 const gchar      *first_button_text,
                                          		 ...);
 
-void		 gedit_message_area_set_response_sensitive 
+void		 gedit_message_area_set_response_sensitive
 							(GeditMessageArea *message_area,
                                         		 gint              response_id,
                                         		 gboolean          setting);
-void 		 gedit_message_area_set_default_response 
+void 		 gedit_message_area_set_default_response
 							(GeditMessageArea *message_area,
                                         		 gint              response_id);
 
