@@ -1,3 +1,7 @@
+2008-04-08  Jens Granseuer  <jensgr@gmx.net>
+
+	* gedit-message-area.h: fix include (sync with gedit)
+
 2008-03-28  Jens Granseuer  <jensgr@gmx.net>
 
 	* theme-installer.c: (gnome_theme_install_from_uri): don't try to
